--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -825,3 +825,154 @@ p {
     padding: 60px;
   }
 }
+  .timeline {
+    position: relative;
+ }
+  .timeline::before {
+    content: '';
+    background: #c5cae9;
+    width: 5px;
+    height: 85%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+ }
+ .timeline-icon .fa{
+   font-size: 56px;
+   color: #082865;
+ }
+  .timeline-item {
+    width: 100%;
+    margin-bottom: 70px;
+ }
+  .timeline-item:nth-child(even) .timeline-content {
+    float: right;
+    padding: 40px 30px 10px 30px;
+ }
+  .timeline-item:nth-child(even) .timeline-content .date {
+    right: auto;
+    left: 0;
+ }
+  .timeline-item:nth-child(even) .timeline-content::after {
+    content: '';
+    position: absolute;
+    border-style: solid;
+    width: 0;
+    height: 0;
+    top: 30px;
+    left: -15px;
+    border-width: 10px 15px 10px 0;
+    border-color: transparent #f5f5f5 transparent transparent;
+ }
+  .timeline-item::after {
+    content: '';
+    display: block;
+    clear: both;
+ }
+  .timeline-content {
+    position: relative;
+    width: 45%;
+    padding: 22px 30px;
+    border-radius: 4px;
+    background: #f6fdff;
+    box-shadow: 0 13px 25px -15px rgba(0, 0, 0, .3);
+ }
+  .timeline-content::after {
+    content: '';
+    position: absolute;
+    border-style: solid;
+    width: 0;
+    height: 0;
+    top: 30px;
+    right: -15px;
+    border-width: 10px 0 10px 15px;
+    border-color: transparent transparent transparent #f5f5f5;
+ }
+  .timeline-img {
+    width: 30px;
+    height: 30px;
+    background: #3f51b5;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;/*
+    margin-top: 25px;*/
+    margin-left: -15px;
+ }
+ }
+  .timeline-card {
+    padding: 0 !important;
+ }
+  .timeline-card p {
+    padding: 0 20px;
+ }
+  .timeline-card a {
+    margin-left: 20px;
+ }
+  .timeline-img-header {
+    height: 200px;
+    position: relative;
+    margin-bottom: 20px;
+ }
+  .timeline-img-header h2 {
+    color: #fff;
+    position: absolute;
+    bottom: 5px;
+    left: 20px;
+ }
+  blockquote {
+    margin-top: 30px;
+    color: #757575;
+    border-left-color: #3f51b5;
+    padding: 0 20px;
+ }
+  .date {
+    background: #0a1b2f;
+    display: inline-block;
+    color: #fff;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    right: 0;
+ }
+  @media screen and (max-width: 768px) {
+    .timeline::before {
+      left: 50px;
+   }
+    .timeline .timeline-img {
+      left: 50px;
+   }
+    .timeline .timeline-content {
+      max-width: 100%;
+      width: auto;
+      margin-left: 70px;
+   }
+    .timeline .timeline-item:nth-child(even) .timeline-content {
+      float: none;
+   }
+    .timeline .timeline-item:nth-child(odd) .timeline-content::after {
+      content: '';
+      position: absolute;
+      border-style: solid;
+      width: 0;
+      height: 0;
+      top: 30px;
+      left: -15px;
+      border-width: 10px 15px 10px 0;
+      border-color: transparent #f5f5f5 transparent transparent;
+   }
+ }
+ 
+ 
+ .timeline-text{
+       margin-left: 82px;
+     margin-top: -55px;
+ }
+ .timeline-text1{
+       margin-left: 82px;
+     margin-top: -55px;
+ }
+ 
+ 
+ 
+
+
